# TFMatcherCpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  TFMatcher.sln
.github/workflows/: c-cpp.yml
TFMatcher/: .Makefile.swp  AlignedTF.cpp  AlignedTF.h  Makefile  Matcher.cpp  Matcher.h  Polygon.cpp  Polygon.h  SharedDefinitions.h  StringUtils.h  TFMatcher  TFMatcher.vcxproj  TFMatcher.vcxproj.filters  TurningFunction.cpp  TurningFunction.h  UnitTest.cpp  Vector2.cpp  Vector2.h
TFMatcher/include/: Matcher.h  MultiMatcher.h  Polygon.h  SharedDefinitions.h  StringUtils.h  TurningFunction.h  Vector2.h
TFMatcher/src/: AlignedTF.cpp  Matcher.cpp  MultiMatcher.cpp  Polygon.cpp  StringUtils.cpp  TurningFunction.cpp  UnitTest.cpp  UnitTestEntry.cpp  Vector2.cpp
TFMatcher/x64/Debug/: TFMatcher.vcxproj.FileListAbsolute.txt
include/: Matcher.h  Polygon.h  TurningFunction.h  Vector2.h
src/: Polygon.cpp  StringUtils.cpp  Vector2.cpp
test/: Polygon.cpp  Vector2.cpp
